[gd_scene load_steps=37 format=3 uid="uid://crjds0kr528w8"]

[ext_resource type="Script" path="res://Escenas/Inicio.gd" id="1_1yj6h"]
[ext_resource type="Texture2D" uid="uid://dqavv1onmf3gd" path="res://Assets/Background/BG Image.png" id="2_c8day"]
[ext_resource type="Texture2D" uid="uid://s7ny7iccsveh" path="res://Assets/Background/Small Cloud 1.png" id="3_i8gbr"]
[ext_resource type="Texture2D" uid="uid://b6cfvy6sp7jj" path="res://Assets/Background/Small Cloud 2.png" id="4_2yvkk"]
[ext_resource type="Texture2D" uid="uid://clhtud5d536x5" path="res://Assets/Background/Small Cloud 3.png" id="5_nambx"]
[ext_resource type="Texture2D" uid="uid://kxvjpktndkim" path="res://Assets/Big Text/12.png" id="7_enkgo"]
[ext_resource type="Texture2D" uid="uid://bvjocid08hhi6" path="res://Assets/Big Text/1.png" id="8_lqtes"]
[ext_resource type="Texture2D" uid="uid://cwgwqev7oxo3m" path="res://Assets/Big Text/21.png" id="9_t8cqg"]
[ext_resource type="Texture2D" uid="uid://cgn6w11wtxrl2" path="res://Assets/Big Text/7.png" id="10_14n5x"]
[ext_resource type="Texture2D" uid="uid://bry2wjyg7sok5" path="res://Assets/Big Text/8.png" id="11_7cr2t"]
[ext_resource type="Texture2D" uid="uid://b4x4xiegvaj5u" path="res://Assets/Big Text/20.png" id="12_oomh4"]
[ext_resource type="Texture2D" uid="uid://oggsug86nkcy" path="res://Assets/Big Text/5.png" id="13_4a1gw"]
[ext_resource type="Texture2D" uid="uid://bexc03kpxkhdq" path="res://Assets/Big Text/19.png" id="14_wqswt"]
[ext_resource type="Texture2D" uid="uid://biyf3qyw68tav" path="res://Assets/Big Text/18.png" id="15_mto0c"]
[ext_resource type="Texture2D" uid="uid://bob0gci6nk01m" path="res://Assets/Green Board/1.png" id="16_bhmfr"]
[ext_resource type="Texture2D" uid="uid://14u82teujriq" path="res://Assets/Green Board/3.png" id="17_tip7u"]
[ext_resource type="Texture2D" uid="uid://cisfxfh0nwqpk" path="res://Assets/Green Board/4.png" id="18_w5x7x"]
[ext_resource type="Texture2D" uid="uid://cg2v4xmurksux" path="res://Assets/Green Board/7.png" id="19_0flm7"]
[ext_resource type="Texture2D" uid="uid://b0q8snlxnpnon" path="res://Assets/Green Board/9.png" id="20_5icgn"]
[ext_resource type="Texture2D" uid="uid://ncqrh541ekbu" path="res://Assets/Green Board/Green Board (guide).png" id="21_asdaj"]
[ext_resource type="Texture2D" uid="uid://b36ransfdai1n" path="res://Assets/Green Board/11.png" id="22_gktvv"]
[ext_resource type="Texture2D" uid="uid://d0grjqbvfii2k" path="res://Assets/Green Board/8.png" id="23_y12nt"]
[ext_resource type="Texture2D" uid="uid://ch0sj6rx3ynok" path="res://Assets/Green Board/5.png" id="24_a2tkt"]
[ext_resource type="Texture2D" uid="uid://c43wrdb6k25u7" path="res://Assets/Big Text/15.png" id="24_keawb"]
[ext_resource type="Texture2D" uid="uid://cq658wtk4jkj3" path="res://Assets/Big Text/9.png" id="25_0hdok"]
[ext_resource type="Texture2D" uid="uid://boru6p2xg5fxx" path="res://Assets/Big Text/24.png" id="26_im8yc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5m7hf"]
texture = ExtResource("16_bhmfr")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_05nyj"]
texture = ExtResource("17_tip7u")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s1ce6"]
texture = ExtResource("18_w5x7x")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yewmu"]
texture = ExtResource("19_0flm7")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7bs01"]
texture = ExtResource("20_5icgn")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oaakx"]
texture = ExtResource("21_asdaj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3s1bg"]
texture = ExtResource("22_gktvv")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xf3tx"]
texture = ExtResource("23_y12nt")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ms2ww"]
texture = ExtResource("24_a2tkt")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_k530c"]
sources/0 = SubResource("TileSetAtlasSource_5m7hf")
sources/1 = SubResource("TileSetAtlasSource_05nyj")
sources/2 = SubResource("TileSetAtlasSource_s1ce6")
sources/3 = SubResource("TileSetAtlasSource_yewmu")
sources/4 = SubResource("TileSetAtlasSource_7bs01")
sources/5 = SubResource("TileSetAtlasSource_oaakx")
sources/6 = SubResource("TileSetAtlasSource_3s1bg")
sources/7 = SubResource("TileSetAtlasSource_xf3tx")
sources/8 = SubResource("TileSetAtlasSource_ms2ww")

[node name="Inicio" type="Node2D"]
script = ExtResource("1_1yj6h")

[node name="Fondo" type="Sprite2D" parent="."]
show_behind_parent = true
texture_filter = 1
position = Vector2(576.875, 324.875)
scale = Vector2(2.99544, 5.04883)
texture = ExtResource("2_c8day")

[node name="SmallCloud1" type="Sprite2D" parent="."]
position = Vector2(973, 113)
texture = ExtResource("3_i8gbr")

[node name="SmallCloud2" type="Sprite2D" parent="."]
position = Vector2(458, 116)
texture = ExtResource("4_2yvkk")

[node name="SmallCloud3" type="Sprite2D" parent="."]
position = Vector2(103, 187)
texture = ExtResource("5_nambx")

[node name="TituloLetra" type="Sprite2D" parent="."]
top_level = true
position = Vector2(486, 85)
rotation = -0.0196088
scale = Vector2(5.54542, 6.06317)
texture = ExtResource("7_enkgo")

[node name="1" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(536, 88)
rotation = -0.0196088
scale = Vector2(4.81191, 5.26117)
texture = ExtResource("8_lqtes")

[node name="21" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(584, 88)
rotation = -0.0196088
scale = Vector2(5.51756, 6.09082)
texture = ExtResource("9_t8cqg")

[node name="7" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(632, 88)
rotation = -0.0196088
scale = Vector2(4.89639, 5.47386)
texture = ExtResource("10_14n5x")

[node name="8" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(680, 88)
rotation = -0.0196088
scale = Vector2(5.24752, 5.86639)
texture = ExtResource("11_7cr2t")

[node name="20" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(511, 158)
rotation = -0.0196088
scale = Vector2(5.47315, 6.64597)
texture = ExtResource("12_oomh4")

[node name="2" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(554, 159)
rotation = -0.0196088
scale = Vector2(4.20313, 4.59556)
texture = ExtResource("8_lqtes")

[node name="13" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(599, 158)
rotation = -0.0196088
scale = Vector2(4.6752, 5.1117)
texture = ExtResource("7_enkgo")

[node name="5" type="Sprite2D" parent="TituloLetra"]
top_level = true
position = Vector2(646, 159)
rotation = -0.0191986
scale = Vector2(5.04548, 5.39259)
texture = ExtResource("13_4a1gw")

[node name="Start" type="Button" parent="."]
show_behind_parent = true
offset_left = 496.0
offset_top = 280.0
offset_right = 672.0
offset_bottom = 328.0

[node name="StartLetra" type="Sprite2D" parent="."]
top_level = true
position = Vector2(520, 304)
scale = Vector2(3, 3)
texture = ExtResource("14_wqswt")

[node name="22" type="Sprite2D" parent="StartLetra"]
position = Vector2(10.6667, 0)
texture = ExtResource("12_oomh4")

[node name="3" type="Sprite2D" parent="StartLetra"]
position = Vector2(21.3333, 0)
texture = ExtResource("8_lqtes")

[node name="18" type="Sprite2D" parent="StartLetra"]
position = Vector2(32, 0)
texture = ExtResource("15_mto0c")

[node name="23" type="Sprite2D" parent="StartLetra"]
position = Vector2(42.6667, 0)
texture = ExtResource("12_oomh4")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_k530c")
format = 2
layer_0/tile_data = PackedInt32Array(1048606, 1, 1, 1114142, 65536, 1, 1179678, 65536, 1, 1245214, 65536, 1, 1048607, 1, 1, 1114143, 65536, 1, 1179679, 65536, 1, 1245215, 65536, 1, 1048608, 1, 1, 1114144, 65536, 1, 1179680, 65536, 1, 1245216, 65536, 1, 1048609, 1, 1, 1114145, 65536, 1, 1179681, 65536, 1, 1245217, 65536, 1, 1048610, 1, 1, 1114146, 65536, 1, 1179682, 65536, 1, 1245218, 65536, 1, 1048611, 1, 1, 1114147, 65536, 1, 1179683, 65536, 1, 1245219, 65536, 1, 1048612, 1, 1, 1114148, 65536, 1, 1179684, 65536, 1, 1245220, 65536, 1, 1048613, 1, 1, 1114149, 65536, 1, 1179685, 65536, 1, 1245221, 65536, 1, 1048614, 1, 1, 1114150, 65536, 1, 1179686, 65536, 1, 1245222, 65536, 1, 1048615, 1, 1, 1114151, 65536, 1, 1179687, 65536, 1, 1245223, 65536, 1, 1048616, 1, 1, 1114152, 65536, 1, 1179688, 65536, 1, 1245224, 65536, 1, 1048617, 1, 1, 1114153, 65536, 1, 1179689, 65536, 1, 1245225, 65536, 1, 1310750, 65536, 1, 1310751, 65536, 1, 1310752, 65536, 1, 1310753, 65536, 1, 1310754, 65536, 1, 1310755, 65536, 1, 1310756, 65536, 1, 1310757, 65536, 1, 1310758, 65536, 1, 1310759, 65536, 1, 1310760, 65536, 1, 1310761, 65536, 1, 1441821, 65536, 1, 1441822, 65536, 1, 1441823, 65536, 1, 1441824, 65536, 1, 1703979, 65536, 1, 1703978, 65536, 1, 1703977, 65536, 1, 1703965, 65536, 1, 1703966, 65536, 1, 1703967, 65536, 1, 1703968, 65536, 1, 1703969, 65536, 1, 1703970, 65536, 1, 1703971, 65536, 1, 1703972, 65536, 1, 1703973, 65536, 1, 1703974, 65536, 1, 1703975, 65536, 1, 1703976, 65536, 1, 1441819, 0, 1, 1441820, 65536, 1, 1507355, 0, 1, 1572891, 0, 1, 1441837, 65537, 1, 1507373, 65537, 1, 1572909, 65537, 1, 1441836, 65536, 1, 1441835, 65536, 1, 1441834, 65536, 1, 1441833, 65536, 1, 1703981, 65537, 1, 1638445, 65537, 1, 1703980, 65536, 1, 1703963, 0, 1, 1703964, 65536, 1, 1638427, 0, 1, 1638428, 65536, 1, 1638429, 65536, 1, 1638430, 65536, 1, 1441825, 65536, 1, 1441826, 65536, 1, 1441827, 65536, 1, 1441828, 65536, 1, 1441829, 65536, 1, 1441830, 65536, 1, 1441831, 65536, 1, 1441832, 65536, 1, 1507356, 65536, 1, 1507357, 65536, 1, 1507358, 65536, 1, 1507359, 65536, 1, 1507360, 65536, 1, 1507361, 65536, 1, 1507362, 65536, 1, 1507363, 65536, 1, 1507364, 65536, 1, 1507365, 65536, 1, 1507366, 65536, 1, 1507367, 65536, 1, 1507368, 65536, 1, 1507369, 65536, 1, 1507370, 65536, 1, 1507371, 65536, 1, 1507372, 65536, 1, 1638444, 65536, 1, 1638431, 65536, 1, 1638440, 65536, 1, 1638443, 65536, 1, 1638442, 65536, 1, 1638441, 65536, 1, 1638439, 65536, 1, 1638438, 65536, 1, 1638437, 65536, 1, 1638436, 65536, 1, 1638435, 65536, 1, 1638434, 65536, 1, 1638433, 65536, 1, 1638432, 65536, 1, 1572892, 65536, 1, 1572893, 65536, 1, 1572894, 65536, 1, 1572895, 65536, 1, 1572896, 65536, 1, 1572897, 65536, 1, 1572898, 65536, 1, 1572899, 65536, 1, 1572900, 65536, 1, 1572901, 65536, 1, 1572902, 65536, 1, 1572903, 65536, 1, 1572904, 65536, 1, 1572905, 65536, 1, 1572906, 65536, 1, 1572907, 65536, 1, 1572908, 65536, 1, 983067, 0, 0, 983085, 65537, 0, 2097197, 65540, 1, 2097179, 3, 1, 2031643, 3, 0, 1966107, 0, 1, 1900571, 0, 1, 2097180, 65539, 1, 2097181, 65539, 1, 2097182, 65539, 1, 2097183, 65539, 1, 2097184, 65539, 1, 2097185, 65539, 1, 2097186, 65539, 1, 2097187, 65539, 1, 2097188, 65539, 1, 2097189, 65539, 1, 2097190, 65539, 1, 2097191, 65539, 1, 2097192, 65539, 1, 2097193, 65539, 1, 2097194, 65539, 1, 2097195, 65539, 1, 2097196, 65539, 1, 1835035, 0, 1, 1769499, 0, 1, 1376283, 0, 1, 1310747, 0, 1, 1245211, 0, 1, 1179675, 0, 1, 1114139, 0, 1, 1048603, 0, 1, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 1, 0, 983073, 1, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 1, 0, 983081, 1, 0, 983082, 1, 0, 983083, 1, 0, 983084, 1, 0, 1048621, 65537, 1, 1114157, 65537, 1, 1179693, 65537, 1, 1245229, 65537, 1, 1310765, 65537, 1, 1376301, 65537, 1, 1769517, 65537, 1, 1835053, 65537, 1, 1900589, 65537, 1, 2031661, 65540, 0, 1966125, 65537, 1, 1048620, 1, 1, 1048619, 1, 1, 1048618, 1, 1, 1048605, 1, 1, 1048604, 1, 1, 1114140, 65536, 1, 1114141, 65536, 1, 1114154, 65536, 1, 1114155, 65536, 1, 1114156, 65536, 1, 1179676, 65536, 1, 1179677, 65536, 1, 1179690, 65536, 1, 1179691, 65536, 1, 1179692, 65536, 1, 1245228, 65536, 1, 1245213, 65536, 1, 1245212, 65536, 1, 1310748, 65536, 1, 1310749, 65536, 1, 1310762, 65536, 1, 1245226, 65536, 1, 1245227, 65536, 1, 1310763, 65536, 1, 1310764, 65536, 1, 1376300, 65536, 1, 1376299, 65536, 1, 1376295, 65536, 1, 1376294, 65536, 1, 1376293, 65536, 1, 1376292, 65536, 1, 1376291, 65536, 1, 1376290, 65536, 1, 1376296, 65536, 1, 1376297, 65536, 1, 1376298, 65536, 1, 1376289, 65536, 1, 1376288, 65536, 1, 1376287, 65536, 1, 1376286, 65536, 1, 1376285, 65536, 1, 1376284, 65536, 1, 1769504, 65536, 1, 1769505, 65536, 1, 1769506, 65536, 1, 1769507, 65536, 1, 1769500, 65536, 1, 1769501, 65536, 1, 1769502, 65536, 1, 1769503, 65536, 1, 1769508, 65536, 1, 1769509, 65536, 1, 1769510, 65536, 1, 1769511, 65536, 1, 1769512, 65536, 1, 1769513, 65536, 1, 1769514, 65536, 1, 1769515, 65536, 1, 1769516, 65536, 1, 1835052, 65536, 1, 1900588, 65536, 1, 1966124, 65536, 1, 1966123, 65536, 1, 1966122, 65536, 1, 1966121, 65536, 1, 1966120, 65536, 1, 1966119, 65536, 1, 1966118, 65536, 1, 1966117, 65536, 1, 1966116, 65536, 1, 1966115, 65536, 1, 1966114, 65536, 1, 1966113, 65536, 1, 1966112, 65536, 1, 1966111, 65536, 1, 1966110, 65536, 1, 1966109, 65536, 1, 1966108, 65536, 1, 1900572, 65536, 1, 1835036, 65536, 1, 1835037, 65536, 1, 1900573, 65536, 1, 1835038, 65536, 1, 1900574, 65536, 1, 1900575, 65536, 1, 1900576, 65536, 1, 1900577, 65536, 1, 1900578, 65536, 1, 1900579, 65536, 1, 1835043, 65536, 1, 1835042, 65536, 1, 1835041, 65536, 1, 1835040, 65536, 1, 1835039, 65536, 1, 1835044, 65536, 1, 1835045, 65536, 1, 1835046, 65536, 1, 1835047, 65536, 1, 1835048, 65536, 1, 1900580, 65536, 1, 1900581, 65536, 1, 1900582, 65536, 1, 1900583, 65536, 1, 1835049, 65536, 1, 1835050, 65536, 1, 1835051, 65536, 1, 1900585, 65536, 1, 1900584, 65536, 1, 1900586, 65536, 1, 1900587, 65536, 1, 2031644, 65539, 0, 2031645, 65539, 0, 2031646, 65539, 0, 2031647, 65539, 0, 2031648, 65539, 0, 2031649, 65539, 0, 2031650, 65539, 0, 2031651, 65539, 0, 2031652, 65539, 0, 2031653, 65539, 0, 2031654, 65539, 0, 2031655, 65539, 0, 2031656, 65539, 0, 2031657, 65539, 0, 2031658, 65539, 0, 2031659, 65539, 0, 2031660, 65539, 0)

[node name="TutorialLetra" type="Sprite2D" parent="."]
position = Vector2(472, 384)
scale = Vector2(3, 3)
texture = ExtResource("12_oomh4")

[node name="21" type="Sprite2D" parent="TutorialLetra"]
position = Vector2(10.3333, 0.166656)
texture = ExtResource("9_t8cqg")

[node name="22" type="Sprite2D" parent="TutorialLetra"]
position = Vector2(21, 0.166656)
texture = ExtResource("12_oomh4")

[node name="15" type="Sprite2D" parent="TutorialLetra"]
position = Vector2(31.6667, 0.166656)
texture = ExtResource("24_keawb")

[node name="18" type="Sprite2D" parent="TutorialLetra"]
position = Vector2(42.3333, 0.166656)
texture = ExtResource("15_mto0c")

[node name="9" type="Sprite2D" parent="TutorialLetra"]
position = Vector2(53, 0.166656)
texture = ExtResource("25_0hdok")

[node name="1" type="Sprite2D" parent="TutorialLetra"]
position = Vector2(63.6667, 0.166656)
texture = ExtResource("8_lqtes")

[node name="12" type="Sprite2D" parent="TutorialLetra"]
position = Vector2(74.3333, 0.166656)
texture = ExtResource("7_enkgo")

[node name="ExitLetra" type="Sprite2D" parent="."]
position = Vector2(536, 464)
scale = Vector2(3, 3)
texture = ExtResource("13_4a1gw")

[node name="24" type="Sprite2D" parent="ExitLetra"]
position = Vector2(10.6667, 0)
texture = ExtResource("26_im8yc")

[node name="9" type="Sprite2D" parent="ExitLetra"]
position = Vector2(21.3333, 0)
texture = ExtResource("25_0hdok")

[node name="20" type="Sprite2D" parent="ExitLetra"]
position = Vector2(32, 0)
texture = ExtResource("12_oomh4")

[node name="Tutorial" type="Button" parent="."]
show_behind_parent = true
offset_left = 448.0
offset_top = 360.0
offset_right = 720.0
offset_bottom = 408.0

[node name="Exit" type="Button" parent="."]
show_behind_parent = true
offset_left = 512.0
offset_top = 440.0
offset_right = 656.0
offset_bottom = 488.0

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
